force-app/main/default/objects/MS_Team_Meeting_Participant__c/MS_Team_Meeting_Participant__c.object-meta.xml
<CustomObject>
    <label>Teams Meeting Participant</label>
    <nameField>
        <displayFormat>TMP-{000000}</displayFormat>
        <label>Participant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teams Meeting Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>