force-app/main/default/objects/MS_Team_Meeting_Participant__c/fields/Actually_Joined__c.field-meta.xml
<CustomField>
    <fullName>Actually_Joined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actually Joined</label>
    <type>Checkbox</type>
</CustomField>