force-app/main/default/objects/MS_Team_Meeting_Participant__c/fields/Attendee_Type__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Attendee Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>