force-app/main/default/objects/MS_Team_Meeting_Participant__c/fields/Entra_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Entra_User_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Entra User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>