force-app/main/default/objects/MS_Team_Meeting_Participant__c/fields/First_Joined_At__c.field-meta.xml
<CustomField>
    <fullName>First_Joined_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Joined At</label>
    <type>DateTime</type>
</CustomField>