force-app/main/default/objects/MS_Team_Meeting_Participant__c/fields/Invitation_Response__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invitation Response</label>
    <length>40</length>
    <type>Text</type>
</CustomField>