force-app/main/default/objects/MS_Team_Meeting_Participant__c/fields/Invitation_Response_At__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Response_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invitation Response At</label>
    <type>DateTime</type>
</CustomField>