force-app/main/default/objects/MS_Team_Meeting_Participant__c/fields/Last_Left_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Left_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Left At</label>
    <type>DateTime</type>
</CustomField>