force-app/main/default/objects/MS_Team_Meeting_Participant__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting Role</label>
    <length>40</length>
    <type>Text</type>
</CustomField>