force-app/main/default/objects/MS_Team_Meeting_Participant__c/fields/Salesforce_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object_API_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salesforce Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>