force-app/main/default/objects/MS_Team_Meeting_Participant__c/fields/Salesforce_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Record_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salesforce Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>