force-app/main/default/objects/MS_Team_Meeting_Participant__c/fields/Total_Attendance_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Total_Attendance_Seconds__c</fullName>
    <label>Total Attendance Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>